# threeaday

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config-example.toml  install.sh  threeaday.service  waybar-config-example.json  waybar-module.sh  waybar-style-example.css
src/: db.rs  gui.rs  main.rs  service.rs
tests/: integration_tests.rs
threeaday-cli/: Cargo.toml
threeaday-cli/src/: main.rs
threeaday-cli/tests/: integration_tests.rs
threeaday-core/: Cargo.toml
threeaday-core/src/: config.rs  db.rs  lib.rs  task.rs  utils.rs
threeaday-gui/: Cargo.toml
threeaday-gui/src/: gui.rs  main.rs
threeaday-service/: Cargo.toml
threeaday-service/src/: main.rs  service.rs
