[package]
name = "threeaday"
version = "0.1.0"
edition = "2021"
default-run = "threeaday"
license = "MIT"
description = "A momentum-building app to break out of depression by completing 3 small tasks daily"
authors = ["carlose"]

[[bin]]
name = "threeaday"
path = "src/main.rs"

[[bin]]
name = "threeaday-service"
path = "src/service.rs"

[[bin]]
name = "threeaday-gui"
path = "src/gui.rs"


[dependencies]
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
directories = "5.0"
notify-rust = "4.0"
gtk4 = "0.9"
glib = "0.20"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
