[package]
name = "threeaday-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }