[package]
name = "threeaday-service"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[[bin]]
name = "threeaday-service"
path = "src/main.rs"

[dependencies]
threeaday-core = { workspace = true }
tokio = { workspace = true }
notify-rust = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }